<resources>
    <string name="app_name">135todo</string>

    <!--common-->
    <string name="text_big">Big</string>
    <string name="text_medium">Medium</string>
    <string name="text_small">Small</string>
    <string name="text_save">Save</string>
    <string name="text_create">Create</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>

    <string name="text_yesterday">Yesterday</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>

    <string name="navigate_in_progress">In progress</string>
    <string name="navigate_incoming">Incoming</string>
    <string name="navigate_stats">Statistic</string>
    <string name="navigate_settings">Settings</string>

    <!--to-do-->
    <string name="todo_new_task">New task</string>
    <string name="todo_big_thing">One big thing</string>
    <string name="todo_medium_thing">Three medium things</string>
    <string name="todo_small_thing">Five small things</string>
    <string name="todo_big_hint">big</string>
    <string name="todo_medium_hint">medium</string>
    <string name="todo_small_hint">small</string>
    <string name="todo_empty_text">empty</string>
    <string name="todo_import_from_backlog">Tap to import from the incoming</string>
    <string name="todo_import_title">Choose task</string>

    <!--backlog-->
    <string name="backlog_filter_all">clear all</string>
    <string name="backlog_filter_tag">by tag</string>
    <string name="backlog_filter_date">by date</string>
    <string name="backlog_sort_name">by name</string>
    <string name="backlog_sort_tag">by tag</string>
    <string name="backlog_sort_date">by date</string>
    <string name="backlog_sort_reset">clear all</string>
    <string name="dialog_edit_task">Edit task</string>
    <string name="dialog_delete_task">Delete task</string>
    <string name="dialog_done_task">Mark as done</string>
    <string name="backlog_all_task">All tasks</string>
    <string name="backlog_add_tag">Add tag&#8230;</string>
    <string name="backlog_choose_tag_title">Choose tag</string>
    <string name="backlog_add_tag_hint">Add new tag</string>

    <!--stats-->
    <string name="stat_title">Statistics</string>
    <string name="stat_day_text">today</string>
    <string name="stat_week_text">this week</string>
    <string name="stat_month_text">this month</string>
    <string name="stat_custom_text">custom</string>

    <!--settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_coming_soon">Coming soon</string>
    <string name="settings_stats_title">Set up statistics</string>
    <string name="settings_stats_desc">Set up your statistic preferences</string>
    <string name="settings_reminders_title">Reminders</string>
    <string name="settings_reminders_desc">Set up reminders to remember to take notes</string>
    <string name="settings_widget_title">Widget</string>
    <string name="settings_widget_desc">Set up widget to see it on the desktop</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_desc">Choose theme</string>
    <string name="settings_user_name_title">User name</string>
    <string name="settings_user_no_name_hint">No name</string>
    <string name="settings_about_methodology">About methodology</string>
    <string name="settings_about_app">About app</string>
    <string name="settings_logout_text">Logout and erase all data</string>
    <string name="theme_title_text">Color Theme</string>
</resources>