<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/todo_big_thing"
                android:textSize="24sp"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_big_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnOne"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/todo_medium_thing"
                android:textSize="24sp"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etTwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_medium_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnTwo"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etThree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_medium_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnThree"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etFour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_medium_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnFour"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/todo_small_thing"
                android:textSize="24sp"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etFive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_small_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnFive"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etSix"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_small_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnSix"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etSeven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_small_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnSeven"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etEight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_small_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnEight"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etNine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="big"
                    android:enabled="false"
                    android:hint="@string/todo_small_hint"
                    android:inputType="textLongMessage"
                    android:text="@string/todo_empty_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btnNine"
                    android:layout_width="@dimen/default_ripple_btn_size"
                    android:layout_height="@dimen/default_ripple_btn_size"
                    android:background="@drawable/bg_default_oval_ripple"
                    android:padding="@dimen/default_half_margin"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>